# dm-database-installer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  Cargo.toml  README.md  config.toml  install.sh  standalone.toml  versions.json  versions.txt
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml  sync-gitee.yml  update-versions.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/milestones/v1.0-phases/01-curl-sh/: 01-CONTEXT.md  01-SUMMARY.md  01-VALIDATION.md
.planning/milestones/v1.0-phases/02-toml/: 02-01-PLAN.md  02-01-SUMMARY.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-PATTERNS.md  02-REVIEW.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-cluster/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/milestones/v1.0-phases/04-release/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-VALIDATION.md
.planning/milestones/v1.1-phases/05-rws/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/milestones/v1.1-phases/06-status/: 06-01-PLAN.md  06-VERIFICATION.md
.planning/milestones/v1.1-phases/07-dsc/: 07-02-PLAN.md  07-03-PLAN.md  07-04-SUMMARY.md  07-REVIEW-FIX.md  07-REVIEW.md  07-VERIFICATION.md
.planning/phases/01-curl-sh/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-PLAN.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-toml/: 02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-cluster/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-RESEARCH.md
.planning/phases/04-release/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-CONTEXT.md  04-RESEARCH.md
.planning/phases/05-rws/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-03-SUMMARY.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW-FIX.md  05-REVIEW.md  05-VALIDATION.md
.planning/phases/06-status/: 06-01-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-PATTERNS.md  06-RESEARCH.md  06-VALIDATION.md
.planning/phases/07-dsc/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-PATTERNS.md  07-RESEARCH.md  07-VALIDATION.md
.planning/quick/20260613-common-module-refactor/: PLAN.md  SUMMARY.md
.planning/quick/20260614-standalone-checkpoint-resume/: PLAN.md  SUMMARY.md
.planning/quick/20260614-standalone-service-register/: PLAN.md
.planning/quick/260613-ttw-remove-windows-install-support/: 260613-ttw-PLAN.md  260613-ttw-SUMMARY.md
.planning/quick/260613-v8r-ssh-standalone-toml-ssh-target-host-ssh/: PLAN.md
.planning/quick/260615-tzh-refactor-standalone-cluster-code-reuse/: 260615-tzh-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: book.toml
docs/src/: SUMMARY.md  changelog.md  cluster.md  configuration.md  installation.md  introduction.md  quickstart.md
scripts/: update-versions.sh
src/: cli.rs  guide.rs  main.rs  platform.rs  ui.rs
src/cluster/: checkpoint.rs  deploy.rs  health.rs  mod.rs  phases.rs  preflight.rs  rollback.rs  ssh.rs
src/cluster/dpc/: mod.rs
src/cluster/dsc/: deploy.rs  mod.rs  templates.rs
src/cluster/primary_standby/: mod.rs
src/cluster/rws/: mod.rs
src/cluster/templates/: dm_ini.rs  dmarch_ini.rs  dmmal_ini.rs  dmmonitor_ini.rs  dmwatcher_ini.rs  mod.rs
src/cmd/: guide.rs  init.rs  mod.rs  self_update.rs  status.rs  validate.rs
src/common/: mod.rs  ssh.rs  sysinfo.rs
src/common/download/: http.rs  mod.rs  select.rs  versions.rs
src/common/ssh/: error.rs  mock.rs  mod.rs  runner.rs  session.rs
src/config/: cluster.rs  dpc.rs  dw.rs  init.rs  mod.rs  ssh.rs  validate.rs
src/download/: http.rs  mod.rs  select.rs  versions.rs
src/install/: advisory.rs  checkpoint.rs  checkpoint_io.rs  checksum.rs  env_setup.rs  idempotent.rs  init.rs  mod.rs  package.rs  preflight.rs  remote_common.rs  silent_install.rs
src/install/dpc/: checkpoint.rs  config_dist.rs  config_files.rs  mod.rs  mp_bootstrap.rs  provision.rs  replicate.rs  startup.rs  test_support.rs
src/install/dw/: checkpoint.rs  config_dist.rs  config_files.rs  connect.rs  mod.rs  post_setup.rs  provision.rs  startup.rs  sync.rs  test_support.rs
src/install/report/: collect.rs  knowledge.rs  mod.rs  model.rs  render.rs
src/install/standalone/: archive.rs  backup.rs  checkpoint.rs  init.rs  mod.rs  remote.rs  rollback.rs  service.rs
src/install/steps/: archive.rs  backup.rs  mod.rs  param_tune.rs  service.rs  silent_install.rs  sql_log.rs
src/install/steps/sql/: auto_para_adj_dm8.sql
src/ssh/: error.rs  local.rs  mock.rs  mod.rs  runner.rs  session.rs
src/standalone/: checkpoint.rs  env_setup.rs  init.rs  mod.rs  remote.rs  rollback.rs  service.rs  silent_install.rs
src/status/: mod.rs
tests/fixtures/: cluster_invalid_no_primary.toml  cluster_valid.toml  invalid.toml  semantic_invalid.toml  valid.toml
